--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,4 +5,7 @@ install_jenkins: true  #defines if jenkins should be installed
 install_tower_cli: false  #defines if ansible tower cli should be installed
 jenkins_apt_key: http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key
 jenkins_apt_repo: 'deb http://pkg.jenkins-ci.org/debian binary/'
+jenkins_cli_path: '{{ jenkins_home_dir }}/jenkins-cli.jar'
 jenkins_home_dir: /var/lib/jenkins
+jenkins_plugins:
+  - ldap
