--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -12,4 +12,4 @@
 
 - name: plugins | upgrading installed plugins
   shell: "java -jar {{ jenkins_cli_path }} -s http://localhost:8080 install-plugin {{ item }}"
-  with_items: jenkins_installed_plugins.stdout
+  with_items: jenkins_installed_plugins.stdout_lines
