--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,10 +8,10 @@ jenkins_apt_repo: 'deb http://pkg.jenkins-ci.org/debian binary/'
 jenkins_cli_path: '{{ jenkins_home_dir }}/jenkins-cli.jar'
 jenkins_home_dir: /var/lib/jenkins
 jenkins_plugins:
-  - ansible
-  - git
-  - gitlab-plugin	
-  - ldap
-  - PowerShell
-  - ssh
-  - vsphere-cloud
+  - 'ansible'
+  - 'git'
+  - 'gitlab-plugin'
+  - 'ldap'
+  - 'PowerShell'
+  - 'ssh'
+  - 'vsphere-cloud'
