ensuring jenkins is running
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.coml>

--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -1,4 +1,9 @@
 ---
+- name: plugins | ensuring jenkins is running
+  service:
+    name: "jenkins"
+    state: restarted
+    
 - name: plugins | downloading jenkins-cli
   get_url:
     url: "http://localhost:8080/jnlpJars/jenkins-cli.jar"
