Changed from restarted to started
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.coml>

--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -2,7 +2,7 @@
 - name: plugins | ensuring jenkins is running
   service:
     name: "jenkins"
-    state: restarted
+    state: started
 
 - name: plugins | waiting for jenkins to start
   wait_for:
