Added add'l plugins
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.coml>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,12 @@ jenkins_plugins:
   - 'git'
   - 'gitlab-plugin'
   - 'ldap'
+  - 'logstash'
   - 'PowerShell'
+  - 'rundeck'
   - 'ssh'
+  - 'travis-yml'
+  - 'vagrant'
+  - 'vmware-vrealize-automation-plugin'
+  - 'vmware-vrealize-codestream'
   - 'vsphere-cloud'
