Added config templates
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.coml>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,3 +9,6 @@
   when: install_jenkins is defined and install_jenkins
 
 - include: plugins.yml
+
+- include: config_jenkins.yml
+  when: config_jenkins is defined and config_jenkins
