Added add'l plugins
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.coml>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,7 @@ jenkins_ldap_info:
 jenkins_plugins:
   - 'active-directory'
   - 'ansible'
+  - 'build-pipeline-plugin'
   - 'git'
   - 'gitlab-plugin'
   - 'ldap'
