--- a/tasks/config_jenkins.yml
+++ b/tasks/config_jenkins.yml
@@ -1,27 +1,30 @@
 ---
-- name: config_jenkins | configuring jenkins
+- name: config_jenkins | Configuring Jenkins
   template:
     src: "{{ item }}.j2"
     dest: "{{ jenkins_home_dir }}/{{ item }}"
-    owner: jenkins
-    group: jenkins
+    owner: "jenkins"
+    group: "jenkins"
   notify:
-    - restart jenkins
+    - 'restart jenkins'
   with_items:
     - 'config.xml'
     - 'hudson.tasks.Mailer.xml'
     - 'org.jenkinsci.plugins.ansible.AnsibleInstallation.xml'
 
-- name: config_jenkins | checking if secure setup
+- name: config_jenkins | Checking If Secure Setup
   stat:
     path: "{{ jenkins_home_dir }}/.jenkins_secure_setup"
-  register: jenkins_secure_setup
-  when: jenkins_config_info.use_security is defined and jenkins_config_info.use_security
+  register: "jenkins_secure_setup"
+  when: >
+        jenkins_config_info.use_security is defined and
+        jenkins_config_info.use_security
 
-- name: config_jenkins | marking as secure setup
+- name: config_jenkins | Marking As Secure Setup
   file:
     dest: "{{ jenkins_home_dir }}/.jenkins_secure_setup"
-    state: touch
+    state: "touch"
   when: >
         not jenkins_secure_setup.stat.exists and
-        (jenkins_config_info.use_security is defined and jenkins_config_info.use_security)
+        (jenkins_config_info.use_security is defined and
+        jenkins_config_info.use_security)
