--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
 # tasks file for ansible-jenkins
+- include: set_facts.yml
+
 - include: debian.yml
   when: ansible_os_family == "Debian"
 
@@ -17,3 +19,5 @@
 
 - include: config_jenkins.yml
   when: config_jenkins
+
+- include: finalize.yml
