--- a/tasks/config_jenkins.yml
+++ b/tasks/config_jenkins.yml
@@ -1,4 +1,32 @@
 ---
+# This disables the new Out-Of-Box setup wizard. If not disabled, that wizard
+# disables the Jenkins CLI until the user has completed it. The auto-generated
+# password for the default 'admin' account will be written out to
+# /var/lib/jenkins/secrets/initialAdminPassword.
+- name: config_jenkins | Disabling Jenkins Setup Wizard
+  lineinfile:
+    dest: "{{ jenkins_config_file }}"
+    regexp: "^{{ jenkins_java_options }}="
+    line: "{{ jenkins_java_options }}=\"-Djava.awt.headless=true -Djenkins.install.runSetupWizard=false\""
+  register: "jenkins_setup_wizard_disabled"
+  when: jenkins_config_info.disable_setup_wizard
+
+- name: config_jenkins | Enabling Jenkins Setup Wizard
+  lineinfile:
+    dest: "{{ jenkins_config_file }}"
+    regexp: "^{{ jenkins_java_options }}="
+    line: "{{ jenkins_java_options }}=\"-Djava.awt.headless=true\""
+  register: "jenkins_setup_wizard_enabled"
+  when: not jenkins_config_info.disable_setup_wizard
+
+- name: config_jenkins | Restarting Jenkins (Setup Wizard Disabled)
+  service:
+    name: "jenkins"
+    state: "restarted"
+  when: >
+        jenkins_setup_wizard_disabled.changed or
+        jenkins_setup_wizard_enabled.changed
+
 - name: config_jenkins | Configuring Jenkins
   template:
     src: "{{ item }}.j2"
