--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,4 @@ install:
 
 script:
   # Basic role syntax check
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
-
-notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  - ansible-playbook ansible/tests/test.yml -i ansible/tests/inventory --syntax-check
