--- a/tasks/config_jenkins.yml
+++ b/tasks/config_jenkins.yml
@@ -43,16 +43,13 @@
 - name: config_jenkins | Checking If Secure Setup
   stat:
     path: "{{ jenkins_home_dir }}/.jenkins_secure_setup"
-  register: "jenkins_secure_setup"
-  when: >
-        jenkins_config_info.use_security is defined and
-        jenkins_config_info.use_security
+  register: "_jenkins_secure_setup_config"
 
 - name: config_jenkins | Marking As Secure Setup
   file:
     dest: "{{ jenkins_home_dir }}/.jenkins_secure_setup"
     state: "touch"
   when: >
-        not jenkins_secure_setup.stat.exists and
+        not _jenkins_secure_setup_config.stat.exists and
         (jenkins_config_info.use_security is defined and
         jenkins_config_info.use_security)
