--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -5,7 +5,7 @@
     state: "present"
   with_items:
     - 'python-software-properties'
-  when: ansible_distribution_version|int < 14
+  when: ansible_distribution_version|version_compare('12.04', '<=')
 
 - name: debian | Adding Jenkins Repo Key
   apt_key:
