Added JenkinsLocationConfiguration options
Added the ability to configure the Jenkins
Location Configuration which includes the system
admin email and Jenkins URL. This commit supports
the template and variables to accomplish this.

Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/Vagrant/playbook.yml
+++ b/Vagrant/playbook.yml
@@ -9,6 +9,7 @@
       num_executors: 2
       system_message: 'Welcome to the Jenkins lab'
       use_security: false
+    jenkins_fqdn: 'http://192.168.250.10:{{ jenkins_port }}'
     jenkins_manage_plugins: true
     jenkins_plugins:
       # - 'active-directory'
