--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,15 @@
 ---
 # defaults file for ansible-jenkins
-config_jenkins: false  #defines if jenkins will be configured from templates or left as default install
-enable_jenkins_sudo: false  #defines if jenkins user should have sudo rights (Useful for running Ansible tasks from CLI)
-install_tower_cli: false  #defines if ansible tower cli should be installed
+
+# Defines if jenkins will be configured from templates or left as default install
+config_jenkins: false
+
+# Defines if jenkins user should have sudo rights
+# (Useful for running Ansible tasks from CLI)
+enable_jenkins_sudo: false
+
+# Defines if ansible tower cli should be installed
+install_tower_cli: false
 
 # Notification e-mails from Jenkins to project owners will be sent with this
 # address in the from header.
@@ -21,10 +28,13 @@ jenkins_apt_repo: 'deb http://pkg.jenkins-ci.org/debian binary/'
 jenkins_cli_mode_over_remoting: false
 
 jenkins_cli_path: '{{ jenkins_home_dir }}/jenkins-cli.jar'
+
 jenkins_config_info:
-  auth_strategy: 'FullControlOnceLoggedInAuthorizationStrategy'  #AuthorizationStrategy$Unsecured or FullControlOnceLoggedInAuthorizationStrategy
+  # AuthorizationStrategy$Unsecured or FullControlOnceLoggedInAuthorizationStrategy
+  auth_strategy: 'FullControlOnceLoggedInAuthorizationStrategy'
   disable_remember_me: false
-  disable_setup_wizard: false  #defines if setup wizard is disabled
+  # Defines if setup wizard is disabled
+  disable_setup_wizard: false
   num_executors: 2
   system_message: 'Welcome to the Jenkins lab'
   use_security: true
@@ -41,6 +51,7 @@ jenkins_debian_pre_req_packages:
   - 'default-jre-headless'
   - 'git'
   - 'jenkins'
+
 jenkins_email_info:
   default_suffix: '@{{ pri_domain_name }}'
   reply_to_address: 'jenkins@{{ pri_domain_name }}'
@@ -54,6 +65,7 @@ jenkins_email_info:
 jenkins_fqdn: 'http://{{ ansible_hostname }}.{{ pri_domain_name }}:{{ jenkins_port }}'
 
 jenkins_home_dir: '/var/lib/jenkins'
+
 jenkins_ldap_info:
   active_directory: true
   enabled: false
@@ -62,32 +74,39 @@ jenkins_ldap_info:
   root_dn: 'DC=example,DC=org'
   user_search_base: 'CN=Users'
   manager_dn: 'CN=gitlab,CN=Users,DC=example,DC=org'
-  manager_password: 'P@55w0rd'  #This will be encrypted when saved from WebUI
+  # This will be encrypted when saved from WebUI
+  manager_password: 'P@55w0rd'
   disable_email_address_resolver: false
-jenkins_manage_plugins: false  #Defines if plugins will be managed using Ansible...
-jenkins_plugins:
-  - 'active-directory'
-  - 'ansible'
-  - 'build-pipeline-plugin'
-  - 'git'
-  - 'gitlab-plugin'
-  - 'job-dsl'
-  - 'ldap'
-  - 'logstash'
-  - 'PowerShell'
-  - 'rundeck'
-  - 'ssh'
-  - 'travis-yml'
-  - 'vagrant'
-  - 'vmware-vrealize-automation-plugin'
-  - 'vmware-vrealize-codestream'
-  - 'vsphere-cloud'
-  - 'workflow-aggregator'
+
+# Defines if plugins will be managed using Ansible...
+jenkins_manage_plugins: false
+
+# Defines plugins to install if jenkins_manage_plugins: true
+jenkins_plugins: []
+  # - 'active-directory'
+  # - 'ansible'
+  # - 'build-pipeline-plugin'
+  # - 'git'
+  # - 'gitlab-plugin'
+  # - 'job-dsl'
+  # - 'ldap'
+  # - 'logstash'
+  # - 'PowerShell'
+  # - 'rundeck'
+  # - 'ssh'
+  # - 'travis-yml'
+  # - 'vagrant'
+  # - 'vmware-vrealize-automation-plugin'
+  # - 'vmware-vrealize-codestream'
+  # - 'vsphere-cloud'
+  # - 'workflow-aggregator'
 
 jenkins_port: 8080
 
 jenkins_redhat_pre_req_packages:
   - 'git'
   - 'java-1.7.0-openjdk'
+
 jenkins_repo_key: 'http://pkg.jenkins-ci.org/{{ ansible_os_family|lower }}/jenkins-ci.org.key'
+
 pri_domain_name: 'example.org'
