--- a/tasks/finalize.yml
+++ b/tasks/finalize.yml
@@ -2,10 +2,12 @@
 - name: finalize | Checking If Initial Admin Password Exists
   stat:
     path: "{{ jenkins_home_dir }}/secrets/initialAdminPassword"
+  become: true
   register: "jenkins_initial_password_check"
 
 - name: finalize | Capturing Initial Admin Password
   command: "cat {{ jenkins_home_dir }}/secrets/initialAdminPassword"
+  become: true
   register: "jenkins_initialAdminPassword"
   changed_when: false
   when:  jenkins_initial_password_check.stat.exists
