--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -3,6 +3,7 @@
   service:
     name: "jenkins"
     state: "started"
+  become: true
 
 - name: plugins | Waiting For Jenkins To Start
   wait_for:
@@ -15,6 +16,7 @@
     dest: "{{ jenkins_home_dir }}/jenkins-cli.jar"
     owner: "jenkins"
     group: "jenkins"
+  become: true
 
 - name: config_jenkins | Checking If Secure Setup
   stat:
