--- a/tasks/python_modules.yml
+++ b/tasks/python_modules.yml
@@ -3,11 +3,13 @@
   easy_install:
     name: "pip"
     state: "present"
+  become: true
 
 - name: python_modules | Installing tower-cli
   pip:
     name: "ansible-tower-cli"
     state: "present"
+  become: true
   ignore_errors: true
   when: >
         install_tower_cli is defined and
