--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -3,25 +3,30 @@
   rpm_key:
     key: "{{ jenkins_repo_key }}"
     state: "present"
+  become: true
 
 - name: redhat | Adding Jenkins Repo
   template:
     src: "etc/yum.repos.d/jenkins.repo.j2"
     dest: "/etc/yum.repos.d/jenkins.repo"
+  become: true
 
 - name: redhat | Installing Jenkins Pre-Reqs
   yum:
     name: "{{ item }}"
     state: "present"
+  become: true
   with_items: '{{ jenkins_redhat_pre_req_packages }}'
 
 - name: redhat | Installing Jenkins
   yum:
     name: "jenkins"
     state: "latest"
+  become: true
 
 - name: redhat | Ensuring Jenkins is Enabled and Started
   service:
     name: "jenkins"
     state: "started"
     enabled: yes
+  become: true
