Fixed Jenkins install for Debian
Jenkins was listed in the pre-reqs and was causing issues during 
install.

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -23,7 +23,7 @@
 - name: debian | Installing Jenkins Pre-Reqs
   apt:
     name: "{{ item }}"
-    state: "latest"
+    state: present
   become: true
   with_items: '{{ jenkins_debian_pre_req_packages }}'
 
