Added a wait for /var/lib/jenkins/secrets/initialAdminPassword to be present

--- a/tasks/finalize.yml
+++ b/tasks/finalize.yml
@@ -1,4 +1,10 @@
 ---
+- name: finalize | Waiting For /var/lib/jenkins/secrets/initialAdminPassword
+  wait_for:
+    path: /var/lib/jenkins/secrets/initialAdminPassword
+    state: present
+  become: true
+  
 - name: finalize | Checking If Initial Admin Password Exists
   stat:
     path: "{{ jenkins_home_dir }}/secrets/initialAdminPassword"
