--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,17 +1,17 @@
 ---
 - name: users | Generating Jenkins SSH Keys
   user:
-    name: "jenkins"
+    name: jenkins
     generate_ssh_key: yes
   become: true
 
 - name: users | Adding Jenkins Account To Sudoers
   lineinfile:
-    dest: "/etc/sudoers"
+    dest: /etc/sudoers
     regexp: "^jenkins ALL"
     line: "jenkins ALL=(ALL) NOPASSWD:ALL"
     validate: "visudo -cf %s"
-    state: "present"
+    state: present
   become: true
   when: >
         enable_jenkins_sudo is defined and
