Only run finalize tasks when secure setup

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,3 +27,6 @@
     - jenkins_plugins
 
 - include: finalize.yml
+  when: >
+        (jenkins_config_info['use_security'] is defined and
+        jenkins_config_info['use_security'])
