--- a/Vagrant/nodes.yml
+++ b/Vagrant/nodes.yml
@@ -20,8 +20,8 @@
   mem: 1024
   provision: true
   vcpu: 1
-  # port_forwards:
-  #   - guest: 80
-  #     host: 8080
+  port_forwards:
+    - guest: 8080
+      host: 8080
   #   - guest: 443
   #     host: 4433
